[package]
name = "sudoku_solver"
version = "1.0.0"
edition = "2021"
about = "A program that solves sudoku puzzles passed to it on the command line"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.18", features = ["derive"] }
